[package]
name = "replace-from-sheets"
version = "0.1.0"
edition = "2021"

[dependencies]
google-sheets4 = "*"
hyper = "^0.10"
hyper-rustls = "0.23.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
yup-oauth2 = "^1.0"
ring = "0.16.20"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }